# termux-notification

./: Cargo.toml  README.md  termux-notification-help.txt
examples/: callbacks.rs  counter.rs
src/: callbacks.rs  lib.rs  options.rs  remove_handle.rs
src/callbacks/: callback_key.rs  map.rs
